--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,32 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  /* color: var(--foreground);
+  background: var(--background); */
+  background: linear-gradient(135deg, #f4f0fc 0%, #ece9f4 100%);
   font-family: Arial, Helvetica, sans-serif;
+  color: #30055B;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.container h1 {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #4b226a;
+}
+
+.container p {
+  font-size: 16px;
+  color: #4b226a;
+}
+
+.container strong {
+  color: #4b226a;
+  font-weight: bold;
 }
