--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,15 @@
 body {
   /* color: var(--foreground);
   background: var(--background); */
-  background: linear-gradient(135deg, #f4f0fc 0%, #ece9f4 100%);
   font-family: Arial, Helvetica, sans-serif;
   color: #30055B;
+
+  background: radial-gradient(circle at 50% 50%, #f3e2ff, #d17aff);
+}
+
+html, body {
+  height: 100%;
+  margin: 0px;
 }
 
 @layer utilities {
@@ -28,11 +34,22 @@ body {
   }
 }
 
+.ContentWrapper {
+  background: linear-gradient(135deg, #f4f0fc 0%, #ece9f4 100%);
+  margin: 20px 0px 20px 0px;
+  flex-grow: 4;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  border-radius: 10px;
 
+
+}
+.container {
+  padding: 10px;
+}
 .container h1 {
   font-size: 28px;
   margin-bottom: 20px;
-  color: #4b226a;
+  color: rgb(75, 34, 106);
 }
 
 .container p {
@@ -43,4 +60,26 @@ body {
 .container strong {
   color: #4b226a;
   font-weight: bold;
+}
+
+.gates {
+  background: url('/images/gates.svg') ;
+  min-height: 300px;
+  min-width: 200px;
+  flex-grow: 4;
+  background-repeat: no-repeat;
+  background-position: top 0 center;
+  background-size: contain;
+
+}
+
+.footer {
+
+  flex-grow: 0;
+  display: flex;
+  padding: 10px;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  background: #FFF;
 }
