--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,9 @@ html, body {
 }
 .container {
   padding: 10px;
+  padding-right: 0;
 }
+
 .container h1 {
   font-size: 28px;
   margin-bottom: 20px;
@@ -68,7 +70,7 @@ html, body {
   min-width: 200px;
   flex-grow: 4;
   background-repeat: no-repeat;
-  background-position: top 0 center;
+  background-position: top 0 right;
   background-size: contain;
 
 }
