--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,11 +63,12 @@ a:hover {
   color: #32479D;
 }
 .logos {
-  flex-grow: 3;
+  flex-grow: 0;
 }
 @media (min-width: 200px) {
   .logoContainer {
-    font-size: 1.2vh;
+    font-size: 13px;
+    white-space: normal;
   }
   .logos {
     min-width: 150px;
@@ -81,7 +82,9 @@ a:hover {
     max-width: 350px;
   }
   .logoContainer {
-    font-size: 1.8vh;
+    font-size: 16px;
+    white-space: nowrap;
+
   }
 }
 
@@ -92,7 +95,7 @@ a:hover {
   }
   .container {
     padding-right: 0;
-    font-size: 2.2vh;
+    font-size: 16px;
 
   }
 }
@@ -123,6 +126,7 @@ a:hover {
 }
 
 .container p {
+  line-height: 1.3;
   font-family: 'Montserrat-Light';
 
   color: #4b226a;
@@ -233,12 +237,12 @@ a:hover {
 
 /* ADDRESS */
 .addressHdr {
-  height: 110px;
+  height: 80px;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
-  font-size: 90px;
-  line-height: 110px;
+  font-size: 60px;
+
   text-transform: capitalize;
   color: #FFFFFF;
 }
@@ -259,20 +263,22 @@ a:hover {
   right: 0px;
   top: 0px;
   background-color: white;
+  transition: all 0.3s ease-in-out;
+  overflow: hidden;
   /* display: flex;
   flex-direction: column; */
 }
 
 /* CONTACTS */
-.contacts .header {
-  text-align: left;
+.contacts .toggler {
+  text-align: right;
   font-style: normal;
   font-weight: 500;
-  font-size: 33px;
-  line-height: 67px;
+  font-size: 12px;
+  line-height: 15px;
   /* identical to box height */
-  text-transform: capitalize;
   color: #7D2D8A;
+  cursor: pointer;
 }
 
 .contacts div {
@@ -281,6 +287,10 @@ a:hover {
   font-size: 18px;
 }
 
+
+.btnFp {
+  font-weight: 600;
+}
 
 .btnlike {
   width: auto; height: auto; display: inline-block;
